cluster/mediaserver/media-dns/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: media-dns
    app.kubernetes.io/version: 1.14.7
  name: media-dns
spec:
  selector:
    app.kubernetes.io/name: media-dns
  clusterIP: 10.43.0.53
  ports:
  - name: dns
    port: 53
    targetPort: 5353
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 5353
    protocol: TCP
