cluster/mediaserver/media-dns/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: media-dns-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: media-dns
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gameyfin
      podSelector:
        matchLabels:
          app.kubernetes.io/name: gameyfin
    ports:
    - port: 5353
      protocol: UDP
    - port: 5353
      protocol: TCP
